# colorbandit

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6874a59c95b7_.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  transfer.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  transfer.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/: imageTransfer.ts
frontend/src/app/login/: page.tsx
frontend/src/app/transfer/: page.tsx
