[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "color-matcher>=0.6.0",
    "fastapi[standard]>=0.115.12",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.0",
    "pydantic[email]>=2.11.3",
    "sqlmodel>=0.0.24",
]
